# ndn-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC-GAPS.md  TODO.md  flake.nix  ndn-fwd.example.toml  ndn-router.example.toml  scratch.txt
.claude/skills/: add-face.md  add-strategy.md  doc-crate.md  sim-test.md  spec-check.md  trace-packet.md
.github/workflows/: benchmarks.yml  browser.yml  ci-face-l2.yml  ci-python.yml  ci-research.yml  ci.yml  embedded.yml  mobile.yml  testbed.yml  wiki.yml
binaries/did-ndn-driver/: Cargo.toml  Dockerfile  README.md
binaries/did-ndn-driver/src/: main.rs
binaries/ndn-bench/: Cargo.toml
binaries/ndn-bench/benches/: merkle_e2e.rs
binaries/ndn-bench/src/: main.rs
binaries/ndn-fwd/: Dockerfile  README.md  ndn-fwd.default.toml
binaries/ndn-fwd/src/: main.rs  mgmt_ndn.rs
binaries/ndn-router/: Cargo.toml
binaries/ndn-router/src/: main.rs  mgmt_ipc.rs  mgmt_ndn.rs
binaries/ndn-tools/: Cargo.toml
binaries/ndn-tools/src/: ctl.rs  iperf.rs  peek.rs  ping.rs  put.rs  sec.rs  traffic.rs
bindings/ndn-boltffi/: Cargo.toml
bindings/ndn-boltffi/src/: codec.rs  lib.rs  types.rs
bindings/ndn-python/: Cargo.toml  pyproject.toml
bindings/ndn-python/src/: lib.rs
crates/engine/ndn-app/: Cargo.toml  README.md
crates/engine/ndn-ipc/: README.md
crates/engine/ndn-security/: Cargo.toml
crates/engine/ndn-security/benches/: merkle_segmented.rs  security.rs
crates/engine/ndn-security/src/: cert_cache.rs  cert_fetcher.rs  file_tpm.rs  key_store.rs  keychain.rs  lib.rs  lvs.rs  manager.rs  merkle.rs  pib.rs  safe_bag.rs  sign_ext.rs  signer.rs  sqlite_pib.rs  trust_schema.rs  verifier.rs  yubikey.rs  zone.rs
crates/engine/ndn-security/src/did/: convert.rs  document.rs  encoding.rs  metadata.rs  mod.rs  resolver.rs  url.rs
crates/engine/ndn-security/src/did/resolver/: key.rs  ndn.rs
crates/engine/ndn-security/src/validator/: chain.rs  mod.rs
crates/engine/ndn-security/tests/: lvs_upstream_fixture.rs
crates/faces/ndn-faces/: Cargo.toml
crates/foundation/ndn-packet/: Cargo.toml
crates/ndn-app/: Cargo.toml
crates/ndn-app/src/: app_face.rs  connection.rs  consumer.rs  lib.rs
crates/ndn-app/tests/: embedded.rs
crates/ndn-cert/: Cargo.toml
crates/ndn-compute/: Cargo.toml
crates/ndn-compute/src/: registry.rs
crates/ndn-config/: Cargo.toml
crates/ndn-config/src/: config.rs  control_parameters.rs  control_response.rs  lib.rs  mgmt.rs  nfd_command.rs
crates/ndn-did/: Cargo.toml
crates/ndn-did/src/: lib.rs
crates/ndn-discovery/: Cargo.toml
crates/ndn-discovery/src/: composite.rs  config.rs  context.rs  hello.rs  hello_protocol.rs  lib.rs  link_medium.rs  neighbor.rs  no_discovery.rs  prefix_announce.rs  probe.rs  protocol.rs  service_discovery.rs  udp_nd.rs  wire.rs
crates/ndn-embedded/src/: cobs.rs  fib.rs  forwarder.rs  lib.rs  pit.rs  wire.rs
crates/ndn-engine/: Cargo.toml
crates/ndn-engine/benches/: pipeline.rs
crates/ndn-engine/src/: builder.rs  compose.rs  discovery_context.rs  dispatcher.rs  engine.rs  expiry.rs  fib.rs  lib.rs
crates/ndn-face-l2/: Cargo.toml  README.md
crates/ndn-face-l2/src/: af_packet.rs  ether.rs  ether_macos.rs  ether_nd.rs  ether_windows.rs  lib.rs  multicast_ether.rs  ndrv.rs  pcap_face.rs
crates/ndn-face-local/: Cargo.toml  README.md
crates/ndn-face-local/benches/: face_local.rs
crates/ndn-face-local/src/: app.rs  ipc.rs  lib.rs  unix.rs
crates/ndn-face-local/src/shm/: spsc.rs
crates/ndn-face-net/: README.md
crates/ndn-face-net/src/: lib.rs  multicast.rs  reliability.rs  tcp.rs  udp.rs  websocket.rs
crates/ndn-face-serial/: Cargo.toml  README.md
crates/ndn-face-serial/src/: cobs.rs  lib.rs  serial.rs
crates/ndn-face-wireless/src/: bluetooth.rs  multicast_ether.rs
crates/ndn-ipc/: Cargo.toml
crates/ndn-ipc/src/: chunked.rs  client.rs  lib.rs  mgmt_client.rs  registry.rs  router_client.rs  server.rs
crates/ndn-mobile/: Cargo.toml
crates/ndn-mobile/src/: bluetooth.rs  engine.rs  lib.rs
crates/ndn-mobile/tests/: integration.rs
crates/ndn-packet/: Cargo.toml
crates/ndn-packet/src/: data.rs  encode.rs  error.rs  fragment.rs  interest.rs  lib.rs  lp.rs  nack.rs  name.rs  signature.rs
crates/ndn-pipeline/: README.md
crates/ndn-pipeline/src/: action.rs  context.rs  lib.rs
crates/ndn-research/: Cargo.toml
crates/ndn-security/: Cargo.toml
crates/ndn-store/: Cargo.toml
crates/ndn-store/benches/: content_store.rs  fjall.rs  lru.rs  sharded.rs
crates/ndn-store/src/: fjall_cs.rs  lib.rs  lru_cs.rs  observable_cs.rs  pit.rs  strategy_table.rs  trie.rs
crates/ndn-strategy/: Cargo.toml
crates/ndn-strategy-wasm/: Cargo.toml
crates/ndn-sync/: Cargo.toml
crates/ndn-transport/: Cargo.toml
crates/support/ndn-tools-core/: Cargo.toml
crates/support/ndn-tools-core/src/: common.rs  lib.rs  peek.rs  put.rs
docs/: README.md  architecture.md  compute.md  did-ndn-spec.md  discovery.md  engine.md  faces.md  forwarding-tables.md  ipc.md  packet-types.md  pipeline.md  security.md  simulation.md  spsc-shm-spec.md  strategy.md  tlv-encoding.md  unimplemented.md  wireless.md
docs/archive/: design-session.md
docs/notes/: extracted-comments.md  high-throughput-forwarding.md  throughput-roadmap.md
docs/protocols/: routing.md
docs/wiki/: book.toml  d3graph-init.js  mermaid-init.js
docs/wiki/src/: faq.md  (+2 more)
examples/: README.md
examples/ble/: README.md
examples/ble/esp32c3/: Cargo.toml
examples/ble/esp32c3/src/: main.rs
examples/ble/macos/: Cargo.toml
examples/ble/macos/src/: main.rs
examples/cross-layer-enricher/: Cargo.toml
examples/strategy-composed/: Cargo.toml
examples/strategy-custom/: Cargo.toml
examples/wasm-strategy/: Cargo.toml
testbed/: Dockerfile.interop  Dockerfile.testclient  docker-compose.yml
testbed/configs/: nfd.conf
testbed/report/: compare.py
tools/bench-charts/: README.md  generate.py
tools/ndn-dashboard/: Cargo.toml  Dioxus.toml  README.md  index.html
tools/ndn-explorer/: README.md  build-wasm.sh  index.html
tools/ndn-mcp/: README.md  package.json  server.js
(+357 files in other folders)
