[package]
name = "did-ndn-driver"
description = "DIF Universal Resolver driver for the did:ndn DID method"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "did-ndn-driver"
path = "src/main.rs"

[dependencies]
ndn-did      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum         = { version = "0.8", features = [] }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
