[package]
name = "ndn-router"
description = "Standalone NDN forwarder binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ndn-router"
path = "src/main.rs"

[features]
## Replace the Unix-socket management interface with an iceoryx2 shared-memory
## RPC channel.  Works on Linux, macOS, and Windows without requiring a Unix
## socket; use when deploying on non-Unix platforms or when you want the
## zero-copy IPC characteristics of iceoryx2.
##
##   cargo build -p ndn-router --features iceoryx2-mgmt
##
## When this feature is NOT enabled, the management interface falls back to a
## Unix socket (Unix targets only).
iceoryx2-mgmt = ["dep:iceoryx2"]

[dependencies]
ndn-engine       = { workspace = true }
ndn-app          = { workspace = true }
ndn-face-net     = { workspace = true }
ndn-face-local   = { workspace = true }
ndn-strategy     = { workspace = true }
ndn-store        = { workspace = true }
ndn-security     = { workspace = true }
ndn-config       = { workspace = true }
ndn-packet       = { workspace = true }
ndn-transport    = { workspace = true }
bytes            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
tokio-util       = { workspace = true, features = ["rt"] }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow           = { workspace = true }
iceoryx2         = { workspace = true, optional = true }
