[package]
name = "ndn-face-local"
description = "NDN local faces: AppFace (in-process mpsc), UnixFace (Unix socket), and ShmFace (shared memory)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Custom SPSC ring-buffer SHM face.
## Wakeup: named FIFO pipe pairs; wakes Tokio's reactor via AsyncFd with no
## thread-pool round-trips.  Requires POSIX shm_open and mkfifo.
## Unix only, excluding Android and iOS (use AppFace for mobile in-process IPC).
spsc-shm = ["dep:libc"]


[dependencies]
ndn-packet    = { workspace = true, features = ["std"] }
ndn-transport = { workspace = true }
bytes         = { workspace = true, features = ["std"] }
tokio         = { workspace = true, features = ["sync", "io-util", "net", "rt", "macros", "time"] }
tokio-util    = { workspace = true, features = ["codec"] }
thiserror     = { workspace = true }
tracing       = { workspace = true }
libc          = { workspace = true, optional = true }


[dev-dependencies]
ndn-tlv       = { workspace = true, features = ["std"] }
tokio     = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
criterion = { workspace = true }

[[bench]]
name    = "face_local"
harness = false
