[package]
name = "ndn-store"
description = "NDN forwarding tables: NameTrie, PIT, and ContentStore"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
fjall = ["dep:fjall"]

[dependencies]
ndn-packet = { workspace = true }
bytes      = { workspace = true }
dashmap    = { workspace = true }
smallvec   = { workspace = true }
lru        = { workspace = true }
ring       = { workspace = true }
thiserror  = { workspace = true }
fjall      = { workspace = true, optional = true }

[dev-dependencies]
ndn-tlv = { workspace = true }
tokio   = { workspace = true, features = ["rt", "macros"] }
fjall   = { workspace = true }
tempfile = "3"
