[package]
name = "ndn-security"
description = "NDN security: signing, verification, trust schema, and certificate management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndn-packet    = { workspace = true, features = ["std"] }
ndn-tlv       = { workspace = true, features = ["std"] }
bytes         = { workspace = true, features = ["std"] }
dashmap       = { workspace = true }
thiserror     = { workspace = true }
ring          = { workspace = true }
# SQLite for the ndn-cxx-compatible pib-sqlite3 backend. `bundled` builds
# SQLite from source (~5 s) so we don't depend on a system library, which
# matters for cross-compilation to Android, iOS, musl, and bare-metal.
rusqlite      = { version = "0.32", features = ["bundled"], optional = true }
ed25519-dalek = { workspace = true, features = ["pkcs8"] }
blake3        = { workspace = true }
# rustcrypto crates for ndn-cxx-compatible FileTpm + SafeBag.
# Versions matched to the existing workspace `p256 = 0.13` (rustcrypto
# 0.13-era release cycle) so all rustcrypto crates share traits cleanly.
# Pure-Rust, no system libs — keeps mobile/embedded/wasm targets clean.
rsa           = { version = "0.9",  default-features = false, features = ["std", "sha2"] }
p256-ecdsa    = { package = "p256", version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8"] }
pkcs1         = { version = "0.7",  features = ["std", "alloc"] }
sec1          = { version = "0.7",  default-features = false, features = ["std", "alloc", "der", "pem", "pkcs8"] }
pkcs8         = { version = "0.10", default-features = false, features = ["std", "alloc", "encryption", "pem"] }
sha2          = { workspace = true }
# Symmetric crypto for SafeBag's PKCS#8-encrypted private key wrapping
# (PBES2 / PBKDF2-HMAC-SHA256 / AES-256-CBC, matching what OpenSSL's
# PKCS8_encrypt produces by default on modern releases).
aes           = { version = "0.8",  default-features = false }
cbc           = { version = "0.1",  default-features = false }
pbkdf2        = { version = "0.12", default-features = false, features = ["hmac"] }
# DID support (formerly ndn-did)
serde         = { workspace = true }
serde_json    = { workspace = true }
base64        = { workspace = true }
futures       = { workspace = true }

tokio         = { workspace = true, features = ["sync", "time", "rt"] }

# Optional hardware key storage via YubiKey PIV (feature: yubikey-piv).
# Requires pcscd and a connected YubiKey.
yubikey = { version = "0.8", optional = true }

[features]
default     = ["sqlite-pib"]
yubikey-piv = ["dep:yubikey"]
# SQLite-backed PIB compatible with ndn-cxx pib-sqlite3 (default-on so
# existing builds get the new backend without flag changes). Pulls in
# rusqlite with the `bundled` feature so SQLite is built from source —
# no system libsqlite3 required, identical behaviour on every target.
sqlite-pib  = ["dep:rusqlite"]

[dev-dependencies]
tokio      = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tempfile   = "3"
criterion  = { workspace = true }
ndn-tlv    = { workspace = true, features = ["std"] }

[[bench]]
name    = "security"
harness = false

[[bench]]
name    = "merkle_segmented"
harness = false
